# GeoModel_rmakhman

./: .gitignore  .gitlab-ci.yml  .gitmodules  .htaccess  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  G4History.macro  LICENSE  README  README.md  bench.g4  draft.txt  drawMagField.C  drawMagField_xyzr.C  fillHistogramExample.cc  fullSimLight.cc  geantino.g4  geantinoMaps.cc  geantinoMapsLinkDef.h  geoModelClash.cc  geoModeltoGDML.cc  geometry.db  graph_list.txt  macro.g4  makke.sh  mkdocs.yml  plotGeantinoMaps.cc  qurilish.sh  setup.sh  sometxt.txt  testMagneticField.cc  tmp.json  tozala.sh
AGDD/: CMakeLists.txt  README.md
AGDD/AGDDControl/: CMakeLists.txt
AGDD/AGDDHandlers/: CMakeLists.txt
AGDD/AGDDKernel/: CMakeLists.txt
AGDD/AGDDModel/: CMakeLists.txt
AGDD/AGDDPlugin/: CMakeLists.txt
AGDD/cmake/: AGDDConfig.cmake  AGDDConfig.cmake.in  AGDDPackaging.cmake
AGDDControl/: CMakeLists.txt
AGDDControl/AGDDControl/: AGDD2GeoModelBuilder.h  AGDDController.h
AGDDControl/src/: AGDD2GeoModelBuilder.cxx  AGDDController.cxx
AGDDHandlers/: CMakeLists.txt
AGDDHandlers/AGDDHandlers/: AGDDHandler.h  BoltHandler.h  IbeamHandler.h  UbeamHandler.h  addmaterialHandler.h  aliasHandler.h  arrayHandler.h  boxHandler.h  chamberPositionerHandler.h  colorHandler.h  compositeHandler.h  compositionHandler.h  consHandler.h  defaultsHandler.h  elcylHandler.h  elementHandler.h  foreachHandler.h  fractionmassHandler.h  gvxyHandler.h  gvxy_pointHandler.h  gvxysxHandler.h  gvxysxyHandler.h  importHandler.h  intersectionHandler.h  materialHandler.h  materialsHandler.h  mposPhiHandler.h  mposWedgeHandler.h  msgHandler.h  natomsHandler.h  pconHandler.h  pgonHandler.h  polyplaneHandler.h  posRPhiZHandler.h  posXYZHandler.h  ringHandler.h  sectionHandler.h  sectorHandler.h  snakeHandler.h  snake_pointHandler.h  (+6 more)
AGDDHandlers/src/: aliasHandler.cxx  compositeHandler.cxx  compositionHandler.cxx  foreachHandler.cxx  gvxyHandler.cxx  gvxysxHandler.cxx  gvxysxyHandler.cxx  importHandler.cxx  intersectionHandler.cxx  mposPhiHandler.cxx  mposWedgeHandler.cxx  pconHandler.cxx  pgonHandler.cxx  posRPhiZHandler.cxx  posXYZHandler.cxx  snakeHandler.cxx  snake_pointHandler.cxx  subtractionHandler.cxx  unionHandler.cxx  varHandler.cxx
AGDDModel/: CMakeLists.txt
AGDDPlugin/: CMakeLists.txt
AGDDPlugin/src/: AGDDPlugin.cxx
AccordionPlugin/: CMakeLists.txt
AccordionPlugin/src/: AccordionPlugin.cxx
ExpressionEvaluator/: CMakeLists.txt
ExpressionEvaluator/ExpressionEvaluator/: Evaluator.h  ExpressionEvaluator.h
ExpressionEvaluator/src/: AGDDTokenizer.cxx  Evaluator.cxx  setStdMath.cxx  setSystemOfUnits.cxx
FSL/: CMakeLists.txt
FSL/src/: BetterTextBrowser.h  configregions.cpp  configregions.h  configregions.ui  fsl_mainwindow.cpp  fsl_mainwindow.h  fsl_mainwindow.ui  main.cpp
FullSimLight/: .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  drawGeantinoMaps.C  fullSimLight.cc  geantino.g4  geantinoMaps.cc  geantino_LAr.g4  geantino_Muon.g4  geantino_Pixel.g4  geantino_SCT.g4  geantino_TRT.g4  geantino_Tile.g4  geoModel2GDML.cc  geoModelClash.cc  geoModelMassCalculator.cc  geoModeltoGDML.cc  pythia.g4  testMagneticField.cc  vis.g4
FullSimLight/FullSimLight/: FSLSensitiveDetectorPlugin.h  FSLUserActionPlugin.h  FSLUserStackingActionPlugin.h  FSLUserTrackingActionPlugin.h  MagFieldPlugin.h
FullSimLight/MagneticField/: CMakeLists.txt
FullSimLight/Plugins/: CMakeLists.txt
FullSimLight/cmake/: FullSimLightConfig.cmake.in  FullSimLightPackaging.cmake
FullSimLight/include/: ClashDetector.hh  EmExtraPhysics.hh  FSLActionInitialization.hh  FSLAnalysis.hh  FSLConfigurator.hh  FSLDetectorConstruction.hh  FSLDetectorMessenger.hh  FSLEventAction.hh  FSLEventData.hh  FSLLengthIntegratorEventAction.hh  FSLLengthIntegratorSteppingAction.hh  FSLPhysListFactory.hh  FSLPhysicsListPlugin.h  FSLPrimaryGeneratorAction.hh  FSLPrimaryGeneratorMessenger.hh  FSLRun.hh  FSLRunAction.hh  FSLRunData.hh  FSLSDPluginLoader.h  FSLSteppingAction.hh  FSLTrackingAction.hh  FSLUserActionPlugin.h  FSLUserEventActionPlugin.h  FSLUserRunActionPlugin.h  FSLUserSteppingActionPlugin.h  G4MagFieldSvcBase.hh  GammaGeneralProcess.hh  GeantinoMapsConfigurator.hh  HepMC3G4AsciiReader.hh  HepMC3G4Interface.hh  HepMC3PrimaryGeneratorAction.hh  MagFieldPlugin.h  MassCalculator.hh  MyActionInitialization.hh  MyAnalysis.hh  MyDetectorConstruction.hh  MyDetectorMessenger.hh  MyEventAction.hh  MyEventData.hh  MyLengthIntegratorEventAction.hh  (+14 more)
FullSimLight/perf/: CMakeLists.txt
FullSimLight/src/: ClashDetector.cc  EmExtraPhysics.cc  FSLActionInitialization.cc  FSLConfigurator.cc  FSLDetectorConstruction.cc  FSLDetectorMessenger.cc  FSLEventAction.cc  FSLEventData.cc  FSLLengthIntegratorEventAction.cc  FSLLengthIntegratorSteppingAction.cc  FSLPhysListFactory.cc  FSLPrimaryGeneratorAction.cc  FSLPrimaryGeneratorMessenger.cc  FSLRun.cc  FSLRunAction.cc  FSLRunData.cc  FSLSDPluginLoader.cc  FSLTrackingAction.cc  G4MagFieldSvcBase.cc  GammaGeneralProcess.cc  GeantinoMapsConfigurator.cc  HepMC3G4AsciiReader.cc  HepMC3G4Interface.cc  HepMC3PrimaryGeneratorAction.cc  Histo.cc  MassCalculator.cc  MyActionInitialization.cc  MyEventAction.cc  (+18 more)
GMCAT/: CMakeLists.txt
GMXPlugin/: CMakeLists.txt
GXClashPointSystems/: CMakeLists.txt
GeoGenericFunctions/: .gitlab-ci.yml  CMakeLists.txt  README.md
GeoMaterial2G4/: CMakeLists.txt  README.md
GeoModel2G4/: CMakeLists.txt
GeoModelDBManager/: CMakeLists.txt
GeoModelDataManagers/: CMakeLists.txt  README.md
GeoModelErrorHandler/: CMakeLists.txt
GeoModelExamples/: .gitlab-ci.yml  CMakeLists.txt
GeoModelExplorer/: CMakeLists.txt
GeoModelG4/: CMakeLists.txt  autonomous-lar.sh
GeoModelIO/: .gitignore  CMakeLists.txt  README.md  README_QT5_NOTES.md
GeoModelJSONParser/: CMakeLists.txt
GeoModelKernel/: .gitlab-ci.yml  .gitmodules_OLD  CMakeLists.txt  README.md
GeoModelRead/: CMakeLists.txt  README.md
GeoModelTools/: CMakeLists.txt  README.md
GeoModelUtilities/: CMakeLists.txt  README.md
GeoModelVisualization/: CMakeLists.txt  README.md
GeoModelWrite/: CMakeLists.txt  README.md
(+2312 files in other folders)
